=======
CHANGES
=======

3.6.3 (unreleased)
------------------

- Using Python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.

3.6.2 (2010-07-31)
------------------

- Updated copyright to `Zope Foundation`, even in pot template.

- Updated e-mail address in pot template to current address of zope
  mailing list.

- Added missing test dependency on `zope.i18n`.


3.6.1 (2010-05-17)
------------------

- Updated Dutch and German translations.

3.6.0 (2009-12-28)
------------------

- Added `configure.zcml` which registers the translations in the
  package. So the package contains its configuration. (Till now it was
  done in `zope.app.zcmlfiles`.)

3.5.2 (2009-12-22)
------------------

- Updated tests to handle Unicode correctly.

- Update Japanese Translation (thanks Takeshi Yamamoto).

3.5.1 (2009-01-27)
------------------

* Added missing dependency (zope.tal) for tests.

3.5.0 (2009-01-26)
------------------

* Moved the dependencies of the extract console script into an `extract`
  extras_require to avoid runtime dependencies.

* Fixed bug #227582 (bad size in zh_CN locale)

3.4.5 (2008-07-16)
------------------

* added filePattern parameter for tal_strings to be able to not only parse
  `.pt` files.

* Updated Dutch translation

3.4.4 (2008-03-05)
------------------

* Updated Spanish translation

3.4.3 (2008-02-20)
------------------

* Updated Spanish translation

* Updated Japanese translation

3.4.2 (2008-02-06)
------------------

* Fixed and updated Russian translation. Fixed issue #186628 (Typos and errors
  in russian translation)

3.4.1 (2007-12-12)
------------------

* Fixed and updated the french translation

3.4.0 (2007-10-25)
------------------

* Folded the i18nextract script into ``zope.app.locales.extract`` and
  exposed it as a console script entry point.

3.4.0a1 (2007-04-22)
--------------------

* Initial release as a separate project, corresponds to ``zope.app.locales``
  from Zope 3.4.0a1
