@@ -11,4 +11,4 @@ arguments = ['-p', 'testproj/src', '-s', 'testproj/site.zcml',
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.locales [test]
+eggs = zope.app.locales [test,zcml]
