@@ -2,6 +2,8 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="zope">
 
+  <include package="zope.i18n" file="meta.zcml" />
+
   <i18n:registerTranslations directory="." />
 
 </configure>
