@@ -13,9 +13,12 @@
 ##############################################################################
 """Tests for the message string extraction tool."""
 
-import os
 import doctest
+import os
 import unittest
+import zope.app.locales
+import zope.component
+import zope.configuration.xmlconfig
 
 
 class TestIsUnicodeInAllCatalog(unittest.TestCase):
@@ -42,6 +45,29 @@ class TestIsUnicodeInAllCatalog(unittest.TestCase):
                 The language is %s (zope.po).
                 Value of the message catalog should be in unicode""" % (lang,)
                                         )
+class ZCMLTest(unittest.TestCase):
+
+    def test_configure_zcml_should_be_loadable(self):
+        try:
+            zope.configuration.xmlconfig.XMLConfig(
+                'configure.zcml', zope.app.locales)()
+        except Exception, e:
+            self.fail(e)
+
+    def test_configure_should_register_n_components(self):
+        gsm = zope.component.getGlobalSiteManager()
+        u_count = len(list(gsm.registeredUtilities()))
+        a_count = len(list(gsm.registeredAdapters()))
+        s_count = len(list(gsm.registeredSubscriptionAdapters()))
+        h_count = len(list(gsm.registeredHandlers()))
+        zope.configuration.xmlconfig.XMLConfig(
+            'configure.zcml', zope.app.locales)()
+        self.assertEqual(u_count + 2, len(list(gsm.registeredUtilities())))
+        self.assertEqual(a_count, len(list(gsm.registeredAdapters())))
+        self.assertEqual(
+            s_count, len(list(gsm.registeredSubscriptionAdapters())))
+        self.assertEqual(h_count, len(list(gsm.registeredHandlers())))
+
 
 
 def test_suite():
@@ -49,7 +75,5 @@ def test_suite():
         doctest.DocTestSuite('zope.app.locales.extract',
             optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,),
         unittest.makeSuite(TestIsUnicodeInAllCatalog),
+        unittest.makeSuite(ZCMLTest),
         ))
-
-if __name__ == '__main__':
-    unittest.main()
